Fix thumbnail style rules on small screens

--- a/components/template/List/ListItem/ListItemThumbnail.module.scss
+++ b/components/template/List/ListItem/ListItemThumbnail.module.scss
@@ -2,36 +2,30 @@
 
 .listItemThumbnail {
   display: inline-block;
-  width: 55px;
-  height: 55px;
   margin: 9px 6px;
 
   picture {
     display: block;
     line-height: 0;
-
-    img {
-      width: 55px;
-      height: 55px;
-      border-radius: 50%;
-      border: 1px solid #eee;
-    }
+    position: relative;
+    border-radius: 50%;
+    border: 1px solid #eee;
+    overflow: hidden;
+    height: 55px;
+    width: 55px;
   }
 
   &:not(.compact) {
     @media (min-width: $screen-sm) {
       flex: none;
       display: block;
-      width: 100%;
       height: auto;
       margin: 0;
       picture {
-        img {
-          width: 100%;
-          height: auto;
-          border-radius: 0;
-          border: none;
-        }
+        width: 100%;
+        height: 260px;
+        border-radius: 0;
+        border: none;
       }
     }
   }
